tests/parsing/smtlib/v2.6/errors/017_sorted_var_bad_name_1.expected
File "tests/parsing/smtlib/v2.6/errors/017_sorted_var_bad_name_1.smt2", line 2, character 18-19:
2 | (assert (forall ((_ int)) true))
                      ^
Error while parsing a sorted variable, read the reserved word '_',
      but expected a symbol, i.e. a variable name.
